Manejo de rutas, creamos modulo router, utilizamos el modulo de node st para servir archivos estaticos dentro de la carpeta public

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Sharmaz/animate-server/issues"
   },
-  "homepage": "https://github.com/Sharmaz/animate-server"
+  "homepage": "https://github.com/Sharmaz/animate-server",
+  "dependencies": {
+    "st": "^1.0.0"
+  }
 }
