--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/Sharmaz/animate-server",
   "dependencies": {
-    "st": "^1.0.0"
+    "st": "^1.0.0",
+    "webrtc2images": "^1.4.4"
+  },
+  "devDependencies": {
+    "browserify": "^12.0.1"
   }
 }
